--- a/frontend/static/css/group_info.css
+++ b/frontend/static/css/group_info.css
@@ -82,8 +82,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 120px;
-    height: 120px;
+    width: 100%;
+    height: 100%;
     border-radius: var(--radius-full);
     object-fit: cover;
     z-index: 1;
@@ -475,6 +475,11 @@
         width: 150px;
         height: 150px;
         font-size: 3.5rem;
+    }
+
+    .group-avatar-image {
+        width: 100%;
+        height: 100%;
     }
 
     .avatar-edit-btn {
